--- a/src/styles.css
+++ b/src/styles.css
@@ -3,45 +3,79 @@ body, html{
     padding: 0;
     height: 100%;
     width: 100%;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: monospace;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    background-image: linear-gradient(120deg, #cafffe 0%, #000000 100%);
+    /* background-image: linear-gradient(120deg, #89f7fe 0%, #000000 100%); */
+    background-size: 300% 300%;
 }
-h1{
+@keyframes toNight {
+	0% {
+		background-position: 0% 50%;
+	}
+	100% {
+		background-position: 100% 50%;
+	}
+}
+@keyframes toDay {
+	0% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
+#header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+    background-color: black;
+    padding: 20px 0px 20px 0px;
+}
+#header > img{
+    width: 50px;
+}
+#heading{
+    font-size: 4em;
     color: white;
     margin: 0;
-    padding: 0px 0px 20px 0px;
+    text-align: center;
 }
 #container{
-    height: 100%;
-    width: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    background-image: url("../resources/background_remove.png");
 }
+
 #content{
-    padding: 20px;
-    height: 450px;
-    width: 900px;
+    padding: 20px 40px 0px 40px;
+    height: max-content;
+    width: 60%;
     display: flex;
     flex-direction: column;
-    background-color: rgba(0,0,0,0.1);
-    border: 1px solid black;
-    border-radius: 2%;
-}
-#top{
-    display: flex;
-    flex-direction: column;
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 10px;
 }
 #search{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     padding: 10px;
 }
 #form{
     display: flex;
     align-items: center;
     gap: 10px;
+    justify-content: center;
 }
 #inputSearch{
     -webkit-border-radius: 20px;
@@ -49,8 +83,8 @@ h1{
     border-radius: 20px;
     border:  none;
     color: gray;
-    width: 300px;
-    height: 20px;
+    width: 40%;
+    height: 25px;
     padding-left: 10px;
     font-weight: 600;
 }
@@ -67,5 +101,55 @@ h1{
     border: none;
 }
 #results{
-    flex:1
+    flex:1;
+    display: flex;
+    flex-direction: column;
+}
+#top{
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    color: white;
+    font-size: xx-large;
+    font-family:monospace;
+    padding-top: 30px;
+    gap:30px;
+}
+#mid{
+    padding: 60px 0px 100px 0px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min-content, 300px));
+    grid-auto-rows: 1fr;
+    height: 100%;
+    justify-content: center;
+    column-gap: 15%;
+    row-gap: 30px;
+}
+#mid > div{
+    background-color: rgba(0,0,0,0.5);
+    border-radius: 7px;
+    display: flex;
+    align-items: center;
+}
+.weather{
+    width: 100%;
+    display: grid;
+    align-items: center;
+    row-gap: 2px;
+    padding-top: 10px;
+}
+.weather > h3{
+    justify-self: center;
+    color: darkgray;
+    padding-bottom: 10px;
+}
+.row1 > img{
+    width: 40px;
+}
+.row1{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    margin-left: 20px;
+    color: white;
 }
